[gd_scene load_steps=15 format=3 uid="uid://u86ckky1ed2v"]

[ext_resource type="Script" path="res://Scenes/Enemies/Rat/Rat.gd" id="1_ik0ka"]
[ext_resource type="Texture2D" uid="uid://vhc0cxjoaey1" path="res://Assets/Extra Assets/Enemies/Rat/rat-f1.png" id="2_j78jg"]
[ext_resource type="Texture2D" uid="uid://xw1jvkjuq8yi" path="res://Assets/Extra Assets/Enemies/Enemie Death/enemy-death-1 (Custom).png" id="2_opiah"]
[ext_resource type="Texture2D" uid="uid://bkjtm1vt8n1uf" path="res://Assets/Extra Assets/Enemies/Rat/rat-f2.png" id="3_1lfo2"]
[ext_resource type="Texture2D" uid="uid://cpe03kdcu10e4" path="res://Assets/Extra Assets/Enemies/Enemie Death/enemy-death-2 (Custom).png" id="3_ag7xl"]
[ext_resource type="Texture2D" uid="uid://b566kap0rm6ox" path="res://Assets/Extra Assets/Enemies/Enemie Death/enemy-death-3 (Custom).png" id="4_qykbf"]
[ext_resource type="Texture2D" uid="uid://bxqyr6hgr86rf" path="res://Assets/Extra Assets/Enemies/Enemie Death/enemy-death-4 (Custom).png" id="5_n1hb6"]
[ext_resource type="Texture2D" uid="uid://bid14027xr67" path="res://Assets/Extra Assets/Enemies/Enemie Death/enemy-death-5 (Custom).png" id="6_ilm64"]
[ext_resource type="Texture2D" uid="uid://dw31h1m5ya1la" path="res://Assets/Extra Assets/Enemies/Enemie Death/enemy-death-6 (Custom).png" id="7_sfy57"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ymdb"]
size = Vector2(43, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_dau70"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_opiah")
}, {
"duration": 1.0,
"texture": ExtResource("3_ag7xl")
}, {
"duration": 1.0,
"texture": ExtResource("4_qykbf")
}, {
"duration": 1.0,
"texture": ExtResource("5_n1hb6")
}, {
"duration": 1.0,
"texture": ExtResource("6_ilm64")
}, {
"duration": 1.0,
"texture": ExtResource("7_sfy57")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_j78jg")
}, {
"duration": 1.0,
"texture": ExtResource("3_1lfo2")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2fi08"]
radius = 658.0
height = 1316.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a0u5y"]
size = Vector2(41.5, 12.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2c8lp"]
size = Vector2(50, 6)

[node name="Rat" type="CharacterBody2D"]
script = ExtResource("1_ik0ka")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_0ymdb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1.90735e-06, 0)
scale = Vector2(0.111395, 0.111395)
sprite_frames = SubResource("SpriteFrames_dau70")
animation = &"Death"

[node name="playerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerDetection"]
visible = false
shape = SubResource("CapsuleShape2D_2fi08")

[node name="playerDeath" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerDeath"]
position = Vector2(-0.75, -4.75)
shape = SubResource("RectangleShape2D_a0u5y")

[node name="playerCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerCollision"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_2c8lp")

[connection signal="body_entered" from="playerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="playerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_shape_entered" from="playerDeath" to="." method="_on_player_death_body_shape_entered"]
[connection signal="body_shape_entered" from="playerCollision" to="." method="_on_player_collision_body_shape_entered"]
